--- a/reactjs-pwa/packages/siminia/package.json
+++ b/reactjs-pwa/packages/siminia/package.json
@@ -144,7 +144,8 @@
     "workbox-precaching": "~5.1.3",
     "workbox-routing": "~5.1.3",
     "workbox-strategies": "~5.1.3",
-    "workbox-webpack-plugin": "5.1.3"
+    "workbox-webpack-plugin": "5.1.3",
+    "react-social-login": "3.4.13"
   },
   "optionalDependencies": {
     "sharp": "~0.23.3"
