--- a/reactjs-pwa/packages/siminia/package.json
+++ b/reactjs-pwa/packages/siminia/package.json
@@ -127,6 +127,7 @@
     "react-slick": "~0.25.2",
     "react-tabs": "~3.0.0",
     "react-test-renderer": "~16.9.0",
+    "react-gtm-module": "~2.0.11",
     "redux": "~4.0.1",
     "redux-actions": "~2.6.4",
     "redux-thunk": "~2.3.0",
