change store name in file manifest

--- a/reactjs-pwa/packages/siminia/static/manifest.json
+++ b/reactjs-pwa/packages/siminia/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Siminia",
-  "short_name": "Siminia",
+  "name": "Al-Bahar Online Stores",
+  "short_name": "Al-Bahar Online Stores",
   "start_url": "/",
   "theme_color": "#ff6334",
   "display": "standalone",
