--- a/reactjs-pwa/packages/siminia/static/manifest.json
+++ b/reactjs-pwa/packages/siminia/static/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Siminia",
-  "short_name": "Siminia",
+  "name": "Al-Bahar Online Stores",
+  "short_name": "Al-Bahar Online Stores",
   "start_url": "/",
-  "theme_color": "#ff6334",
+  "theme_color": "#0082FF",
   "display": "standalone",
   "background_color": "#fff",
   "description": "Shop the look",
