Apply app dashboard configs to cloudways server

--- a/reactjs-pwa/packages/siminia/upward.yml
+++ b/reactjs-pwa/packages/siminia/upward.yml
@@ -35,6 +35,9 @@ siminiaResponse:
           pattern: '^/(graphql|rest|media|pub)(/|$)'
           use: siminiaProxy
         - matches: request.url.pathname
+          pattern: '^/appdashboard/rest/app_configs'
+          use: siminiaProxy
+        - matches: request.url.pathname
           pattern: '^/(robots\.txt|favicon\.ico|manifest\.json)'
           use: staticFromRoot
         - matches: request.url.pathname
